@startuml
title EVENTOS — UML (estado actual en rama junie)

' ========= Bases =========
class BaseEntity <<abstract>> {
  +id: string
  +createdAt: string
  +updatedAt: string
  +isActive: boolean
}

' OJO: hay dos variantes de BaseItem en el repo (ver notas)
class BaseItem_Selectores <<abstract>> {
  +id: string
  +nombre: string
  +activo: boolean
  +notas: string?
}

class BaseItem_Shared <<abstract>> {
  +id: string
  +nombre: string
  +isActive: boolean
  +notas: string?
}

' ========= Core =========
class Evento {
  +nombre: string       <<req, <=100>>
  +fecha: string        <<req>>
  +direccion: string?   <<<=150>>
  +presupuesto: number?
  +aforoMaximo: number?
}

class Reserva {
  +eventoId: string
  +cliente: string
  +parrilladas: number
  +picarones: number
  +metodoPagoId: string
  +receptorId: string
  +tipoConsumoId: string
  +comercialId: string
  +totalPedido: number
  +pagado: boolean
  +comprobado: boolean
  +locked: boolean
  +puntoRecogidaId: string?
}

class Gasto {
  +eventoId: string
  +producto: string
  +unidadId: string
  +cantidad: number
  +tipoPrecio: "con IVA" | "sin IVA"
  +tipoIVA: number
  +precioBase: number
  +precioNeto: number
  +isPack: boolean
  +unidadesPack: number?
  +precioUnidad: number?
  +pagadorId: string?
  +tiendaId: string?
  +notas: string?
  +comprobado: boolean
  +locked: boolean
}

class Precio {
  +eventoId: string
  +concepto: string
  +importe: number
  +moneda: string
  +locked: boolean?
}

' ========= Selectores =========
class Comercial {
  +telefono: string?   ' existe en el tipo actual
}
class MetodoPago {
  +requiereReceptor: boolean?
}
class Pagador
class Tienda {
  +direccion: string?
  +horario: string?
}
class Unidad
class TipoConsumo
class ReceptorCobrador
class PuntoRecogida {
  +direccion: string?
  +horario: string?
  +comentarios: string?
}

' Inheritances
BaseEntity <|-- Evento
BaseEntity <|-- Reserva
BaseEntity <|-- Gasto
BaseEntity <|-- Precio

BaseItem_Selectores <|-- Comercial
BaseItem_Selectores <|-- MetodoPago
BaseItem_Selectores <|-- Pagador
BaseItem_Selectores <|-- Tienda
BaseItem_Selectores <|-- Unidad
BaseItem_Selectores <|-- TipoConsumo
BaseItem_Selectores <|-- ReceptorCobrador
BaseItem_Selectores <|-- PuntoRecogida

' ========= Relaciones =========
Evento "1" o-- "0..*" Reserva : eventoId
Evento "1" o-- "0..*" Gasto   : eventoId
Evento "1" o-- "0..*" Precio  : eventoId

Reserva "0..*" o-- "1" MetodoPago       : metodoPagoId
Reserva "0..*" o-- "1" ReceptorCobrador : receptorId
Reserva "0..*" o-- "1" TipoConsumo      : tipoConsumoId
Reserva "0..*" o-- "1" Comercial        : comercialId
Reserva "0..*" o-- "0..1" PuntoRecogida : puntoRecogidaId

Gasto "0..*" o-- "1" Unidad  : unidadId
Gasto "0..*" o-- "0..1" Tienda  : tiendaId
Gasto "0..*" o-- "0..1" Pagador : pagadorId
@enduml
